unifi-controller/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: unifi-controller
  name: unifi-controller
spec:
  replicas: 1
  serviceName: unifi-controller
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      hostNetwork: true
      containers:
        - env:
            - name: MEM_LIMIT
              value: "2048"
            - name: MEM_STARTUP
              value: "1024"
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: lscr.io/linuxserver/unifi-controller:7.3.76
          name: unifi-controller
          resources:
            requests:
              memory: 1100Mi
            limits:
              memory: 2200Mi
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
            - containerPort: 5514
              protocol: UDP
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8443
            - containerPort: 8843
            - containerPort: 8880
            - containerPort: 6789
          volumeMounts:
            - mountPath: /config
              name: unifi
      restartPolicy: Always
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi
